Fix RelationalTimeline lines being offcentered

--- a/src/components/RelationalTimeline/RelationalTimeline.module.css
+++ b/src/components/RelationalTimeline/RelationalTimeline.module.css
@@ -76,6 +76,7 @@
     background-color: #e9e9e9;
     position: absolute;
     left: 50%;
+    transform: translateX(-50%);
     bottom: 0;
     z-index: -1;
 }
